fvm_dispatch/helper/tests/naming/empty-name-string.stderr
error: proc macro panicked
 --> tests/naming/empty-name-string.rs:5:18
  |
5 |     let _str_hash = method_hash!("");
  |                     ^^^^^^^^^^^^^^^^
  |
  = help: message: invalid method name: EmptyString
